--- a/.github/workflows/safe-deployment.yml
+++ b/.github/workflows/safe-deployment.yml
@@ -1,298 +1,26 @@
-name: Safe Deployment with Gate
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+
+name: Deploy (Safe Mode)
+
+# State Pattern: safe状態のデプロイ
+# 手動トリガー、品質チェック + デプロイ後検証付き
 
 on:
-  push:
-    branches: ['main']
   workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
-  deployments: write
-
-concurrency:
-  group: 'pages-deployment'
-  cancel-in-progress: true
 
 jobs:
-  quality-check:
-    name: Quality & Safety Check
-    runs-on: ubuntu-latest
-    outputs:
-      build-status: ${{ job.status }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: TypeScript typecheck
-        run: npm run typecheck
-
-      - name: ESLint check
-        run: npm run lint
-
-      - name: Build application
-        run: npm run build
-
-      - name: Verify build output
-        run: |
-          if [ ! -d "dist" ]; then
-            echo "❌ Build output directory 'dist' not found"
-            exit 1
-          fi
-          
-          # Check critical files
-          if [ ! -f "dist/index.html" ]; then
-            echo "❌ index.html not found in dist"
-            exit 1
-          fi
-          
-          DIST_SIZE=$(du -sh dist | cut -f1)
-          echo "✅ Build successful: $DIST_SIZE"
-
-      - name: Upload build artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-
-  staging-deployment:
-    name: Deploy to Staging
-    needs: quality-check
-    runs-on: ubuntu-latest
-    if: success()
-    environment:
-      name: staging
-      url: https://staging.nanashi8.github.io
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: github-pages
-
-      - name: Extract artifact
-        run: |
-          mkdir -p staging-dist
-          cd staging-dist
-          tar -xzf ../artifact.tar
-          cd ..
-
-      - name: Health check on staging
-        run: |
-          echo "🔍 Running health checks on staging..."
-          
-          # スモークテスト用のURLをシミュレート
-          echo "✅ HTML structure validated"
-          echo "✅ Assets are accessible"
-          echo "✅ Service Worker configuration present"
-          
-          # 実際のステージング環境がある場合、ここでHTTP健全性チェック実行
-          # curl -f https://staging.nanashi8.github.io/index.html || exit 1
-
-      - name: Create staging deployment
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const deployment = await github.rest.repos.createDeployment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.sha,
-              environment: 'staging',
-              auto_merge: false,
-              description: 'Staging deployment for testing'
-            });
-            
-            console.log('Staging deployment created:', deployment.data.id);
-
-  approval-gate:
-    name: Manual Approval for Production
-    needs: staging-deployment
-    runs-on: ubuntu-latest
-    if: success()
-    steps:
-      - name: Create deployment for approval
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const pr = context.payload.pull_request;
-            
-            if (context.ref !== 'refs/heads/main') {
-              console.log('ℹ️  Skipping approval gate (not main branch)');
-              return;
-            }
-            
-            console.log('⏸️  本番デプロイの承認待機中...');
-            console.log('📋 チェックリスト:');
-            console.log('  - [ ] Stagingで動作確認完了');
-            console.log('  - [ ] 生徒への影響確認');
-            console.log('  - [ ] ロールバック手順確認済み');
-            console.log('');
-            console.log('✅ すべて確認できたら本番デプロイを続行してください');
-
-      - name: Wait for approval
-        run: |
-          echo "⏳ 本番デプロイには手動承認が必要です"
-          echo ""
-          echo "以下の確認を行い、GitHub Actions が許可されたら進みます:"
-          echo "  1. ステージング環境で動作確認"
-          echo "  2. ロールバック手順の確認"
-          echo "  3. 生徒への影響評価"
-
-  production-deployment:
-    name: Deploy to Production
-    needs: approval-gate
-    runs-on: ubuntu-latest
-    if: success()
-    environment:
-      name: production
-      url: https://nanashi8.github.io
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: github-pages
-
-      - name: Extract artifact
-        run: |
-          mkdir -p prod-dist
-          cd prod-dist
-          tar -xzf ../artifact.tar
-          cd ..
-
-      - name: Create release tag
-        run: |
-          TAG_NAME="v$(date +%Y%m%d-%H%M%S)"
-          echo "RELEASE_TAG=$TAG_NAME" >> $GITHUB_ENV
-
-      - name: Tag release
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const tag = process.env.RELEASE_TAG;
-            try {
-              await github.rest.git.createRef({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: `refs/tags/${tag}`,
-                sha: context.sha
-              });
-              console.log(`✅ Release tag created: ${tag}`);
-            } catch (error) {
-              if (error.status === 422) {
-                console.log(`Tag ${tag} already exists`);
-              } else {
-                throw error;
-              }
-            }
-
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
-
-      - name: Health check after deployment
-        run: |
-          echo "✅ Production deployment completed"
-          echo "📊 Monitoring status:"
-          echo "  - Service Worker: Active"
-          echo "  - Cache invalidation: Enabled"
-          echo "  - Rollback available: Yes"
-
-      - name: Create deployment status
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.repos.createDeploymentStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              deployment_id: context.payload.deployment.id,
-              state: 'success',
-              environment_url: 'https://nanashi8.github.io',
-              description: 'Successfully deployed to production'
-            });
-
-      - name: Post deployment summary
-        run: |
-          cat > deployment-summary.txt << 'SUMMARY'
-          🚀 本番デプロイ完了
-          - デプロイ時刻: $(date '+%Y年%m月%d日 %H:%M:%S')
-          - コミット: ${{ github.sha }}
-          - ロールバック: git reset --hard <previous-tag> で可能
-
-          監視項目:
-          - ✅ Service Worker: アクティブ
-          - ✅ キャッシュ無効化: 有効
-          - ✅ セッション継続性: 確保
-
-          生徒への影響:
-          - 学習中のセッションは自動保存されます
-          - 新版は次のページロード時に適用されます
-          - アップデート通知は非侵襲的です
-
-          ロールバック手順:
-          問題発生時は以下で前バージョンに戻します:
-          git reset --hard <previous-tag>
-          git push -f origin main
-          SUMMARY
-          cat deployment-summary.txt
-
-  post-deployment-check:
-    name: Post-Deployment Health Check
-    needs: production-deployment
-    runs-on: ubuntu-latest
-    if: success()
-    steps:
-      - name: Verify deployment
-        run: |
-          echo "📋 本番環境の健全性確認"
-          echo ""
-          echo "実施確認項目:"
-          echo "  ✅ index.html: キャッシュバスティング有効"
-          echo "  ✅ sw.js: Service Worker登録"
-          echo "  ✅ dist/: ビルド成功"
-          echo ""
-          echo "⚠️  以下をモニタリング中:"
-          echo "  - JavaScript エラーレート"
-          echo "  - ページロード時間"
-          echo "  - Service Worker更新検知"
-          echo ""
-          echo "問題検出時の自動ロールバック: 有効"
-
-      - name: Create rollback guide
-        run: |
-          cat > ROLLBACK_PROCEDURE.md << 'EOF'
-          # 緊急ロールバック手順
-
-          デプロイ直後に問題が発生した場合:
-
-          ## 1. 最新版を確認
-          git log --oneline -5
-          git describe --tags --always
-
-          ## 2. 前バージョンに戻す
-          # 直前のタグを確認
-          git tag | tail -10
-
-          # ロールバック（例）
-          git reset --hard v20251211-143022
-          git push -f origin main
-
-          ## 3. 確認
-          - GitHub Actions で新デプロイが始まる
-          - 5-10分後に本番環境が更新される
-          - Service Worker のキャッシュが無効化される
-
-          ## 注意事項
-          - 生徒セッションは保持されます（sessionStorage）
-          - 古いコードが実行される可能性があるため、テスト環境で事前検証必須
-          EOF
-          echo "✅ ロールバック手順ドキュメント作成完了"
+  deploy:
+    name: 安全モードデプロイ
+    uses: ./.github/workflows/_deploy-state.yml
+    with:
+      state: safe
+      skip-quality-check: false
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
