--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,28 @@
-name: Build and deploy to GitHub Pages
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+
+name: Deploy (Auto on Push)
+
+# State Pattern: auto状態のデプロイ
+# mainブランチへのpush時に自動デプロイ
 
 on:
   push:
     branches: ['main']
-  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - run: npm ci
-
-      - run: npm run build
-
-      - uses: actions/configure-pages@v4
-
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
+    name: 自動デプロイ
+    uses: ./.github/workflows/_deploy-state.yml
+    with:
+      state: auto
+      skip-quality-check: false  # 品質チェックを実施
     permissions:
+      contents: read
       pages: write
       id-token: write
-    steps:
-      - uses: actions/deploy-pages@v4
+
