fix(ci): GitHub Actions失敗の全解消
✅ 修正内容:
- auto-merge: 存在しないbuildチェック待機を削除
- health-check: issues:write権限を追加
- structure-validation/smoke-test: permissions追加
- 禁止パターンファイル削除（*2.md）
- quiz-app→nanashi8.github.io名前統一
- test:coverage/test:integration エイリアス追加

📊 影響:
- Auto-merge: buildチェック待機エラー解消
- health-check: issue作成権限エラー解消
- structure-validation: 禁止パターンエラー解消
- 全ワークフロー: permissions明示で403エラー予防

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -30,14 +30,6 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]' || github.actor == 'github-actions[bot]' || contains(github.event.pull_request.labels.*.name, 'auto-merge')
     steps:
-      - name: Wait for checks
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          check-name: 'build'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
-
       - name: Auto merge
         uses: pascalgn/automerge-action@v0.16.2
         env:
@@ -50,3 +42,4 @@ jobs:
           MERGE_RETRY_SLEEP: "10000"
           UPDATE_LABELS: ""
           UPDATE_METHOD: "rebase"
+          # automerge-action自体がすべてのチェック完了を自動で待つため、wait-on-checkは不要
