chore(classical-japanese): 例文形式を＜現代語訳＞に統一

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ Attached*.css
 *.old-vanilla
 *.working
 
+# Data migration backups (do not commit)
+public/data/classical-japanese/*.before-*.csv
+
 # macOS Finder duplicate files
 *\ 2.*
 * 2.json
