--- a/package.json
+++ b/package.json
@@ -133,14 +133,16 @@
     "@vitest/coverage-v8": "^4.0.15",
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.22",
+    "es-module-shims": "^1.10.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "es-module-shims": "^1.10.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jsdom": "^27.3.0",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "lint-staged": "^16.2.7",
     "markdownlint-cli": "^0.46.0",
     "postcss": "^8.5.6",
@@ -149,8 +151,8 @@
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.21.0",
     "three": "0.160.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^5.4.21",
