--- a/package.json
+++ b/package.json
@@ -79,9 +79,9 @@
     "docs:check": "npm run docs:analyze && npm run docs:analyze:naming",
     "docs:stats": "echo '📊 Documentation Statistics:' && find docs -name '*.md' | wc -l && echo 'Markdown files' && node scripts/analyze-doc-links.mjs | grep -E '^📁|^🔗|^✅|^❌'",
     "docpart": "tsx scripts/docpart/cli.ts",
-    "docpart:init": "npm run docpart init",
-    "docpart:lint": "npm run docpart lint",
-    "docpart:graph": "npm run docpart graph",
+    "docpart:init": "npm run docpart -- init",
+    "docpart:lint": "npm run docpart -- lint",
+    "docpart:graph": "npm run docpart -- graph",
     "generate-index": "tsx scripts/generate-docs-index.ts",
     "sync:reading-techniques": "node scripts/sync-reading-techniques.mjs",
     "update-instructions": "node scripts/update-instructions.mjs all",
