feat: reading techniques PDF, mobile UI fixes, paragraph indents

--- a/package.json
+++ b/package.json
@@ -78,6 +78,11 @@
     "docs:analyze:naming": "node scripts/analyze-naming-violations.mjs",
     "docs:check": "npm run docs:analyze && npm run docs:analyze:naming",
     "docs:stats": "echo '📊 Documentation Statistics:' && find docs -name '*.md' | wc -l && echo 'Markdown files' && node scripts/analyze-doc-links.mjs | grep -E '^📁|^🔗|^✅|^❌'",
+    "test:vocab-split": "tsx src/utils/testVocabularySplit.ts",
+    "test:slash-split": "tsx src/utils/testSlashSplit.ts",
+    "test:paren-split": "tsx src/utils/testParenSplit.ts",
+    "test:splits": "npm run test:vocab-split && npm run test:slash-split && npm run test:paren-split",
+    "generate:split-data": "tsx src/utils/generateSplitData.ts",
     "docpart": "tsx scripts/docpart/cli.ts",
     "docpart:init": "npm run docpart -- init",
     "docpart:lint": "npm run docpart -- lint",
@@ -89,6 +94,7 @@
     "update-pipelines": "node scripts/update-pipelines.mjs",
     "update-all-docs": "npm run update-instructions && npm run update-specifications && npm run update-pipelines",
     "generate:classical-japanese-pdf": "tsx scripts/generate-classical-japanese-pdf.ts",
+    "generate:reading-techniques-pdf": "tsx scripts/generate-reading-techniques-pdf.ts",
     "fill:classical-japanese-examples": "tsx scripts/fill-classical-japanese-examples.ts",
     "type-check": "tsc --noEmit"
   },
