fix: markdownlintignoreにDATA_GENERATION_TOOLS_CATALOG.mdを追加
- MD033エラー（Inline HTML）を回避
- details/summaryタグを含むため

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -4,3 +4,4 @@ dist/
 coverage/
 docs/GIT_HISTORY_LEARNING_REPORT.md
 extensions/servant/PHASE2_COMPLETION_REPORT.md
+docs/how-to/DATA_GENERATION_TOOLS_CATALOG.md
