feat(servant): 紹介画面に健全診断(メンテナンス)を追加
- 天体儀(Overview)に🩺ボタン追加
- 新規MaintenanceStateで簡易ヘルスチェック表示
- 🌟メニュー/コマンド(servant.showMaintenance)からも起動可能

--- a/extensions/servant/package.json
+++ b/extensions/servant/package.json
@@ -172,6 +172,10 @@
         "title": "Servant: 🌟 Show Constellation View"
       },
       {
+        "command": "servant.showMaintenance",
+        "title": "Servant: 🩺 Maintenance / Health Check"
+      },
+      {
         "command": "servant.openConstellationMenu",
         "title": "Servant: 🌟 Constellation Menu"
       },
