--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -22,7 +22,7 @@ permissions:
 jobs:
   deploy:
     name: 手動デプロイ
-    uses: nanashi8/nanashi8.github.io/.github/workflows/deploy-state.yml@main
+    uses: ./.github/workflows/deploy-state.yml
     with:
       state: manual
       skip-quality-check: ${{ github.event.inputs.skip_quality_check == 'true' }}
