--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   deploy:
     name: 自動デプロイ
-    uses: nanashi8/nanashi8.github.io/.github/workflows/deploy-state.yml@main
+    uses: ./.github/workflows/deploy-state.yml
     with:
       state: auto
       skip-quality-check: false  # 品質チェックを実施
