chore: move requirements files to config directory
- Moved requirements.txt and requirements-ud-parse.txt to config/
- Updated 3 references:
  - .github/workflows/grammar-quality-check.yml
  - .github/workflows/maintenance-ai.yml
  - docs/how-to/LOCAL_UD_DEPENDENCY_PARSE.md
- Build passes successfully

--- a/.github/workflows/maintenance-ai.yml
+++ b/.github/workflows/maintenance-ai.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 依存関係インストール
         run: |
           npm ci
-          pip install -r requirements.txt || echo "requirements.txtなし"
+          pip install -r config/requirements.txt || echo "config/requirements.txtなし"
 
       - name: 定期メンテナンスAI実行
         id: maintenance
