--- a/.github/workflows/grammar-quality-check.yml
+++ b/.github/workflows/grammar-quality-check.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f config/requirements.txt ]; then pip install -r config/requirements.txt; fi
       
       - name: Run advanced grammar validation
         id: validation
