feat: add project boundary guard system
Prevent file misplacement outside project directory

Changes:
- Add project-boundary-guard.instructions.md (AI guidance)
- Add check-project-boundary.sh (automated detection)
- Add guard:check-boundary npm script
- Add investigation report (PROJECT_BOUNDARY_VIOLATION_REPORT.md)

Problem Identified:
- 8 misplaced items in parent directory (.vscode, .aitk, etc.)
- No explicit boundary definition in existing instructions

Solution:
- Clear boundary definition (nanashi8.github.io/ only)
- Automated violation detection
- Examples of common mistakes

Prevention:
- Run 'npm run guard:check-boundary' to verify
- All files must be within nanashi8.github.io/
- Parent directory operations are forbidden

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "guard:check-cycle": "cat .aitk/.commit-count 2>/dev/null || echo '0'",
     "guard:reset-cycle": "echo '0' > .aitk/.commit-count",
     "guard:spec-check": "node scripts/record-spec-check.mjs",
+    "guard:check-boundary": "bash scripts/check-project-boundary.sh",
     "docs:analyze": "node scripts/analyze-doc-links.mjs",
     "docs:analyze:naming": "node scripts/analyze-naming-violations.mjs",
     "docs:check": "npm run docs:analyze && npm run docs:analyze:naming",
